# pesapal-rs

./: .pre-commit-config.yaml  Cargo.toml  LICENCE  README.md  bacon.toml
.github/workflows/: general.yml
src/: environemt.rs  environment.rs  error.rs  lib.rs  macros.rs  pesapal.rs  types.rs
src/pesapal/: auth.rs  ipn.rs  list_ipn.rs  refund.rs  register_ipn.rs  submit_order.rs  transaction_status.rs
tests/: submit_order.rs
tests/common/: mod.rs
tests/it/: mod.rs  submit_order.rs
