[package]
name = "pesapal-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
derive_builder = "0.12"
dotenvy = "0.15"
cached = "0.44"
[dependencies.uuid]
version = "1.4"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]
[dependencies.tokio]
version = "1.31"
default_features = false
features = ["macros", "rt", "rt-multi-thread"]
