[package]
name = "pesapal"
version = "0.1.0"
edition = "2021"
authors = ["Yasir Shariff <yasirshariff@outlook.com>"]
description = "A client library for accessing Pesapal services"
license = "./LICENCE"
repository = "https://github.com/itsyaasir/pesapal-rs"
keywords = ["pesapal", "pesa", "payment", "client-library"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
derive_builder = "0.12"
serde-aux = "4.2"
serde_repr = "0.1"
chrono = { version = "0.4", default-features = false, features = ["time"] }
cached = "0.44"
ulid = { version = "1.0", features = ["serde"] }


[dev-dependencies]
dotenvy = "0.15"
httpmock = "0.6"

[dev-dependencies.tokio]
version = "1.31"
default-features = false
features = ["macros", "rt"]
